--- a/contato.html
+++ b/contato.html
@@ -3,23 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <title>Contato</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <main>
-        <header>
-            <div class="navbar">
-                <div >
-                    <h1 class="name"><a href="index.html">Home</a></h1>
-                </div>
-                <div>
-                    <ul class="botoes">
-                        <a href="produto.html">produto</a>
-                        <a class="botoesMeio" href="quemSomos.html">quem somos</a>
-                        <a href="contato.html">contato</a>
-                    </ul>
-                </div>
+    <header>
+        <div class="navbar">
+            <div >
+                <h1 class="name"><a href="index.html">Home</a></h1>
             </div>
-        </header>
+            <div>
+                <ul class="botoesNav">
+                    <li class="listaNav"><a href="produto.html">produto</a></li>
+                    <li class="listaNav"><a class="botoesMeio" href="quemSomos.html">quem somos</a></li>
+                    <li class="listaNav"><a href="contato.html">contato</a></li>
+                </ul>
+            </div>
+        </div>
+    </header>
+    <main>
+
         <div>
             <h2>Entre em contato</h2>
         </div>
