--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Aula de IHM</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -11,10 +12,10 @@
                 <h1 class="name"><a href="index.html">Home</a></h1>
             </div>
             <div>
-                <ul class="botoes">
-                    <a href="produto.html">produto</a>
-                    <a class="botoesMeio" href="quemSomos.html">quem somos</a>
-                    <a href="contato.html">contato</a>
+                <ul class="botoesNav">
+                    <li class="listaNav"><a href="produto.html">produto</a></li>
+                    <li class="listaNav"><a class="botoesMeio" href="quemSomos.html">quem somos</a></li>
+                    <li class="listaNav"><a href="contato.html">contato</a></li>
                 </ul>
             </div>
         </div>
@@ -22,11 +23,15 @@
 
     <main>
         <div>
-           <h1>HOME</h1>
+           <h1 class="pageName">HOME</h1>
         </div>
         <div>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus hendrerit lacus purus. Cras nec porta arcu. Praesent posuere diam nulla, at posuere urna volutpat sit amet. Donec a turpis sed elit dapibus venenatis. Curabitur dictum lobortis nibh non semper. Ut ornare, purus at imperdiet dignissim, est elit hendrerit massa, non dignissim tellus nibh in lectus. Etiam ex lectus, vulputate nec pretium at, vehicula eget magna.</p>
             <p>Mauris ante elit, mollis ut egestas vel, fringilla nec tortor. Duis a fringilla sapien, eget molestie velit. Morbi urna nisi, tincidunt non eros a, aliquet hendrerit sem. Vestibulum posuere mattis mauris, feugiat congue turpis venenatis pellentesque. Morbi nec venenatis felis, in suscipit nunc. Interdum et malesuada fames ac ante ipsum primis in faucibus. Duis eget ligula nec leo interdum hendrerit in et felis. Sed sollicitudin non sem id bibendum. Sed sit amet leo eros. Vivamus sem magna, ornare quis viverra id, semper vitae enim. Etiam scelerisque enim dui, quis finibus nisi rutrum quis. Phasellus imperdiet vitae diam vel suscipit. Suspendisse fringilla ante velit, eget tincidunt est vestibulum id. Phasellus in pellentesque ipsum.</p>
+
+            <h2>O que fazemos</h2>
+
+
             <p>Nunc tempor, odio ac semper finibus, lorem leo fermentum erat, id auctor purus quam sed quam. Integer pretium nulla ut porta bibendum. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec feugiat, ante ac elementum facilisis, sem erat faucibus mauris, in sollicitudin massa tortor quis diam. Praesent eu libero turpis. Nam lectus urna, blandit et laoreet imperdiet, lacinia ut leo. Integer fringilla aliquet erat ac egestas. Vivamus porta tristique maximus.</p>
             <p>Nullam sollicitudin, odio eget semper bibendum, massa augue cursus nibh, ut egestas risus felis sed quam. Ut a rutrum ex. Sed in ligula pharetra enim auctor sollicitudin vel quis nulla. In fermentum porttitor neque, non efficitur lorem tempus venenatis. Mauris mollis consequat augue, nec efficitur massa ultricies et. Aliquam condimentum sem nibh. Duis et dignissim risus, a tempor metus. Proin luctus efficitur ipsum, porta auctor sapien rhoncus vitae. Proin blandit dictum dui id commodo. Donec posuere leo quis urna hendrerit, sit amet porta odio volutpat.</p>
             <p>Nullam tincidunt bibendum nisi vel consequat. Proin eu pellentesque ligula. Ut tempor laoreet volutpat. Donec a pretium mauris. Morbi vehicula pellentesque sagittis. Proin convallis nisl vitae risus molestie lacinia. Nunc consequat faucibus mauris, quis mattis dui condimentum a. Mauris tortor quam, tempus facilisis accumsan eget, fermentum a eros. Nunc condimentum in nisl eu tristique. Mauris sit amet mollis nunc. Morbi quis rutrum sem. Aenean finibus dui a massa semper rutrum. Nunc mauris arcu, vulputate at nunc cursus, aliquet egestas metus. Sed arcu risus, luctus non velit vitae, porta commodo est.</p>
