--- a/produto.html
+++ b/produto.html
@@ -3,18 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>produto</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <div class="navbar">
-            <div>
+            <div >
                 <h1 class="name"><a href="index.html">Home</a></h1>
             </div>
             <div>
-                <ul class="botoes">
-                    <a href="produto.html">produto</a>
-                    <a class="botoesMeio" href="quemSomos.html">quem somos</a>
-                    <a href="contato.html">contato</a>
+                <ul class="botoesNav">
+                    <li class="listaNav"><a href="produto.html">produto</a></li>
+                    <li class="listaNav"><a class="botoesMeio" href="quemSomos.html">quem somos</a></li>
+                    <li class="listaNav"><a href="contato.html">contato</a></li>
                 </ul>
             </div>
         </div>
