--- a/quemSomos.html
+++ b/quemSomos.html
@@ -3,18 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>Quem somos</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="quemSomos.style.css">
 </head>
     <body>
     <header>
         <div class="navbar">
-            <div>
+            <div >
                 <h1 class="name"><a href="index.html">Home</a></h1>
             </div>
             <div>
-                <ul class="botoes">
-                    <a href="produto.html">produto</a>
-                    <a class="botoesMeio" href="quemSomos.html">quem somos</a>
-                    <a href="contato.html">contato</a>
+                <ul class="botoesNav">
+                    <li class="listaNav"><a href="produto.html">produto</a></li>
+                    <li class="listaNav"><a class="botoesMeio" href="quemSomos.html">quem somos</a></li>
+                    <li class="listaNav"><a href="contato.html">contato</a></li>
                 </ul>
             </div>
         </div>
@@ -22,14 +24,16 @@
     <main>
         <div>
             <div>
-                <h2>Quem sou</h2>
+                <h2 class="pageName">Quem sou</h2>
             </div>
 
-            <div>
-                <img src="/imgs/pessoa-icon.png" alt="foto da pessoa">
+            <div class="imageCenter">
+                <div>
+                    <img src="/imgs/pessoa-icon.png" alt="foto da pessoa">
+                </div>
             </div>
-            <div>
-                <strong>Luann Felipe</strong>
+            <div class="textoCentro">
+                <h3 class="name">Luann Felipe</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus hendrerit lacus purus. Cras nec porta arcu. Praesent posuere diam nulla, at posuere urna volutpat sit amet. Donec a turpis sed elit dapibus venenatis. Curabitur dictum lobortis nibh non semper. Ut ornare, purus at imperdiet dignissim, est elit hendrerit massa, non dignissim tellus nibh in lectus. Etiam ex lectus, vulputate nec pretium at, vehicula eget magna.</p>
             </div>
         </div>
