Organizando as pastas e adição de titulo e subtitulo

--- a/pages/contato.html
+++ b/pages/contato.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Contato</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style/style.css">
 </head>
 <body>
     <header>
@@ -37,7 +37,7 @@
             <textarea id="mensagem"></textarea>
         </div>
         <div>
-            <a href=""><img src="imgs/instragam.png" alt="imgem do instragram"></a>
+            <a href=""><img src="../imgs/instragam.png" alt="imgem do instragram"></a>
         </div>
     </main>
 </body>
