--- a/pages/quemSomos.html
+++ b/pages/quemSomos.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Quem somos</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="quemSomos.style.css">
+    <link rel="stylesheet" href="../style/style.css">
+    <link rel="stylesheet" href="../style/quemSomos.style.css">
 </head>
     <body>
     <header>
