adição das informações sobre arduino no pagina home

--- a/pages/index.html
+++ b/pages/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Aula de IHM</title>
     <link rel="stylesheet" href="../style/style.css">
+    <link rel="stylesheet" href="../style/home.style.css">
 </head>
 <body>
     <header>
@@ -22,9 +23,25 @@
     </header>
 
     <main>
-        <section>
-           <h1 class="titulo">Seja bem vindo</h1>
-            <p class="subtitulo">Aqui você pode encontrar tudo de arduino</p>
+        <section class="mensagem">
+            <h2 class="titulo">
+                Aqui você pode encontrar<br> tudo sobre aruino
+            </h2>
+            <img src="../imgs/arduino-logo.png" alt="logo d arduino" width="250" height="250">
+        </section>
+        <section class="arduino">
+            <img src="../imgs/ARDUINO_UNO-.png" alt="foto do arduino" width="450" height="327">
+            <div class="info">
+                <h2>
+                    O que é um Arduino?
+                </h2>
+                <div>
+                    <p>Arduino é uma plataforma de desenvolvimento de projetos eletrônicos (ou prototipagem eletrônica,
+                        como também é comumente dito), constituída tanto de hardware e software.</p>
+                    <p>Uma das principais utilidades do Arduino é seu uso em projetos de eletrônica. Sua portabilidade e
+                        seu custo fazem com que sua escolha para esses tipos de projetos seja a mais viável.</p>
+                </div>
+            </div>
         </section>
         <section>
             <h2>O que fazemos</h2>
