adição da tabela de qualidade e footer

--- a/pages/index.html
+++ b/pages/index.html
@@ -43,14 +43,44 @@
                 </div>
             </div>
         </section>
-        <section>
-            <h2>O que fazemos</h2>
+        <section class="numeros">
+            <div>
+                <h2>Vamos levar a sua experiência<br> comprando arduino a outro nivel</h2>
 
-
-            <p>Nunc tempor, odio ac semper finibus, lorem leo fermentum erat, id auctor purus quam sed quam. Integer pretium nulla ut porta bibendum. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec feugiat, ante ac elementum facilisis, sem erat faucibus mauris, in sollicitudin massa tortor quis diam. Praesent eu libero turpis. Nam lectus urna, blandit et laoreet imperdiet, lacinia ut leo. Integer fringilla aliquet erat ac egestas. Vivamus porta tristique maximus.</p>
-            <p>Nullam sollicitudin, odio eget semper bibendum, massa augue cursus nibh, ut egestas risus felis sed quam. Ut a rutrum ex. Sed in ligula pharetra enim auctor sollicitudin vel quis nulla. In fermentum porttitor neque, non efficitur lorem tempus venenatis. Mauris mollis consequat augue, nec efficitur massa ultricies et. Aliquam condimentum sem nibh. Duis et dignissim risus, a tempor metus. Proin luctus efficitur ipsum, porta auctor sapien rhoncus vitae. Proin blandit dictum dui id commodo. Donec posuere leo quis urna hendrerit, sit amet porta odio volutpat.</p>
-            <p>Nullam tincidunt bibendum nisi vel consequat. Proin eu pellentesque ligula. Ut tempor laoreet volutpat. Donec a pretium mauris. Morbi vehicula pellentesque sagittis. Proin convallis nisl vitae risus molestie lacinia. Nunc consequat faucibus mauris, quis mattis dui condimentum a. Mauris tortor quam, tempus facilisis accumsan eget, fermentum a eros. Nunc condimentum in nisl eu tristique. Mauris sit amet mollis nunc. Morbi quis rutrum sem. Aenean finibus dui a massa semper rutrum. Nunc mauris arcu, vulputate at nunc cursus, aliquet egestas metus. Sed arcu risus, luctus non velit vitae, porta commodo est.</p>
+                <div id="lista_de_dados">
+                    <ul>
+                        <li>
+                            +150<br>
+                            de produtos
+                        </li>
+                        <li id="item-meio">
+                            +10 anos<br>
+                            de esperiencia no mergado
+                        </li>
+                        <li>
+                            +1500<br>
+                            de clientes
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </section>
     </main>
+
+    <footer>
+            <div>
+                <p>feito por:</p>
+                <p><a href="https://github.com/alnnu">Luann felipe</a></p>
+            </div>
+            <div id="meio">
+                <p>Contacte a gente:</p>
+                <p><a href="mailto:luannf1020@gmail.com">luannf1020@gmail.com</a></p>
+            </div>
+            <div>
+                <p><a href="./contato.html">Mais formas de contato</a></p>
+                <p><a href="./quemSomos.html">Veja quem somos</a></p>
+                <p><a href="./produto.html">Veja nossos produtos</a></p>
+            </div>
+    </footer>
 </body>
 </html>
