--- a/pages/produto.html
+++ b/pages/produto.html
@@ -21,5 +21,22 @@
         </div>
     </header>
 
+
+    <footer>
+        <div>
+            <p>feito por:</p>
+            <p><a href="https://github.com/alnnu">Luann felipe</a></p>
+        </div>
+        <div id="meio">
+            <p>Contacte a gente:</p>
+            <p><a href="mailto:luannf1020@gmail.com">luannf1020@gmail.com</a></p>
+        </div>
+        <div>
+            <p><a href="./contato.html">Mais formas de contato</a></p>
+            <p><a href="./quemSomos.html">Veja quem somos</a></p>
+            <p><a href="./produto.html">Veja nossos produtos</a></p>
+        </div>
+    </footer>
+
 </body>
 </html>
