adição adição de contactar e coloquei o index no root

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Aula de IHM</title>
-    <link rel="stylesheet" href="../style/style.css">
-    <link rel="stylesheet" href="../style/home.style.css">
+    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/home.style.css">
 </head>
 <body>
     <header>
@@ -14,9 +14,9 @@
             </div>
             <div>
                 <ul class="botoesNav">
-                    <li class="listaNav"><a href="produto.html">produto</a></li>
-                    <li class="listaNav"><a class="botoesMeio" href="quemSomos.html">quem somos</a></li>
-                    <li class="listaNav"><a href="contato.html">contato</a></li>
+                    <li class="listaNav"><a href="pages/produto.html">produto</a></li>
+                    <li class="listaNav"><a class="botoesMeio" href="pages/quemSomos.html">quem somos</a></li>
+                    <li class="listaNav"><a href="pages/contato.html">contato</a></li>
                 </ul>
             </div>
         </div>
@@ -27,10 +27,10 @@
             <h2 class="titulo">
                 Aqui você pode encontrar<br> tudo sobre aruino
             </h2>
-            <img src="../imgs/arduino-logo.png" alt="logo d arduino" width="250" height="250">
+            <img src="imgs/arduino-logo.png" alt="logo d arduino" width="250" height="250">
         </section>
         <section class="arduino">
-            <img src="../imgs/ARDUINO_UNO-.png" alt="foto do arduino" width="450" height="327">
+            <img src="imgs/ARDUINO_UNO-.png" alt="foto do arduino" width="450" height="327">
             <div class="info">
                 <h2>
                     O que é um Arduino?
@@ -77,9 +77,9 @@
                 <p><a href="mailto:luannf1020@gmail.com">luannf1020@gmail.com</a></p>
             </div>
             <div>
-                <p><a href="./contato.html">Mais formas de contato</a></p>
-                <p><a href="./quemSomos.html">Veja quem somos</a></p>
-                <p><a href="./produto.html">Veja nossos produtos</a></p>
+                <p><a href="pages/contato.html">Mais formas de contato</a></p>
+                <p><a href="pages/quemSomos.html">Veja quem somos</a></p>
+                <p><a href="pages/produto.html">Veja nossos produtos</a></p>
             </div>
     </footer>
 </body>
