--- a/pages/contato.html
+++ b/pages/contato.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <title>Contato</title>
     <link rel="stylesheet" href="../style/style.css">
+    <link rel="stylesheet" href="../style/contato.style.css">
 </head>
 <body>
     <header>
         <div class="navbar">
             <div >
-                <h1 class="name"><a href="index.html">Home</a></h1>
+                <h1 class="name"><a href="../index.html">Home</a></h1>
             </div>
             <div>
                 <ul class="botoesNav">
@@ -21,24 +22,36 @@
         </div>
     </header>
     <main>
-
-        <div>
-            <h2>Entre em contato</h2>
-        </div>
-
-        <div>
-            <label for="email">Email:</label>
-            <input type="email" id="email">
-        </div>
-        <br>
-        <br>
-        <div>
-            <label for="mensagem">Mensagem</label>
-            <textarea id="mensagem"></textarea>
-        </div>
-        <div>
-            <a href=""><img src="../imgs/instragam.png" alt="imgem do instragram"></a>
-        </div>
+        <section class="formasDeContato">
+            <h2 class="titulo">Formas de contato</h2>
+            <ul>
+                <li>logo telefone</li>
+                <li>logo instragam</li>
+                <li>logo email</li>
+            </ul>
+        </section>
+        <section>
+            <h2>Ou nos contacte por aqui</h2>
+            <form>
+                <div>
+                    <label for="email"><h3>Email:</h3></label>
+                    <input type="text" name="nome" id="nome"/>
+                    <label for="nome"><h3>Nome:</h3></label>
+                    <input type="text" name="email" id="email"/>
+                    <label for="interesse"><h3>interesse</h3></label>
+                    <select id="interesse">
+                        <option>Exemplo 1</option>
+                        <option>Exemplo 2</option>
+                        <option>Exemplo 3</option>
+                        <option>Exemplo 4</option>
+                    </select>
+                </div>
+                <div>
+                    <label for="mensagem"><h3>Mensagem:</h3></label>
+                    <textarea id="mensagem" name="mensagem" rows="4" cols="50"></textarea>
+                </div>
+            </form>
+        </section>
     </main>
 
 
