--- a/pages/produto.html
+++ b/pages/produto.html
@@ -9,7 +9,7 @@
     <header>
         <div class="navbar">
             <div >
-                <h1 class="name"><a href="index.html">Home</a></h1>
+                <h1 class="name"><a href="../index.html">Home</a></h1>
             </div>
             <div>
                 <ul class="botoesNav">
