correção de alguns erros

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <main>
         <section class="mensagem">
             <h2 class="titulo">
-                Aqui você pode encontrar<br> tudo sobre aruino
+                Aqui você pode encontrar<br> tudo sobre arduino
             </h2>
             <img src="imgs/arduino-logo.png" alt="logo d arduino" width="250" height="250">
         </section>
@@ -55,7 +55,7 @@
                         </li>
                         <li id="item-meio">
                             +10 anos<br>
-                            de esperiencia no mergado
+                            de esperiência no mercado
                         </li>
                         <li>
                             +1500<br>
