ajuste na pagina de contato

--- a/pages/contato.html
+++ b/pages/contato.html
@@ -22,31 +22,24 @@
         </div>
     </header>
     <main>
-        <section class="formasDeContato">
-            <h2 class="titulo">Formas de contato</h2>
-            <ul>
-                <li>logo telefone</li>
-                <li>logo instragam</li>
-                <li>logo email</li>
-            </ul>
-        </section>
         <section>
-            <h2>Ou nos contacte por aqui</h2>
+            <h2>Nos mande mensagem por aqui por aqui</h2>
             <form>
                 <div>
                     <label for="email"><h3>Email:</h3></label>
-                    <input type="text" name="nome" id="nome"/>
+                    <input type="email" name="nome" id="nome"/>
                     <label for="nome"><h3>Nome:</h3></label>
                     <input type="text" name="email" id="email"/>
                     <label for="interesse"><h3>interesse</h3></label>
                     <select id="interesse">
-                        <option>Exemplo 1</option>
-                        <option>Exemplo 2</option>
-                        <option>Exemplo 3</option>
-                        <option>Exemplo 4</option>
+                        <option>Não definito</option>
+                        <option>Placa de arduino</option>
+                        <option>Sensores</option>
+                        <option>Kits</option>
+                        <option>Livros</option>
                     </select>
                 </div>
-                <div>
+                <div class="esq">
                     <label for="mensagem"><h3>Mensagem:</h3></label>
                     <textarea id="mensagem" name="mensagem" rows="4" cols="50"></textarea>
                 </div>
