ajuste na pagina quem somos e tirei imagens sem uso

--- a/pages/quemSomos.html
+++ b/pages/quemSomos.html
@@ -22,21 +22,50 @@
         </div>
     </header>
     <main>
-        <div>
-            <div>
-                <h2 class="pageName">Quem sou</h2>
+        <section>
+            <div class="tituloPagina">
+                <h2 class="titulo">Quem somos</h2>
+                <p class="subtitulo">Somos uma equipe constituida por 3 pessoas.</p>
             </div>
 
-            <div class="imageCenter">
+            <section class="pessoas">
                 <div>
-                    <img src="/imgs/pessoa-icon.png" alt="foto da pessoa">
+                    <div class="imageCenter">
+                        <div>
+                            <img src="/imgs/pessoa-icon.png" alt="foto da pessoa">
+                        </div>
+                    </div>
+                    <div class="textoCentro">
+                        <h3 class="name">Luann Felipe</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed rhoncus.</p>
+                    </div>
                 </div>
-            </div>
-            <div class="textoCentro">
-                <h3 class="name">Luann Felipe</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus hendrerit lacus purus. Cras nec porta arcu. Praesent posuere diam nulla, at posuere urna volutpat sit amet. Donec a turpis sed elit dapibus venenatis. Curabitur dictum lobortis nibh non semper. Ut ornare, purus at imperdiet dignissim, est elit hendrerit massa, non dignissim tellus nibh in lectus. Etiam ex lectus, vulputate nec pretium at, vehicula eget magna.</p>
-            </div>
-        </div>
+                <div>
+                    <div class="imageCenter">
+                        <div>
+                            <img src="/imgs/pessoa-icon.png" alt="foto da pessoa">
+                        </div>
+                    </div>
+                    <div class="textoCentro">
+                        <h3 class="name">Gabrielly Ferreira</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In nisi.</p>
+                    </div>
+                </div>
+                <div>
+                    <div class="imageCenter">
+                        <div>
+                            <img src="/imgs/pessoa-icon.png" alt="foto da pessoa">
+                        </div>
+                    </div>
+                    <div class="textoCentro">
+                        <h3 class="name">André Melo</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ut.</p>
+                    </div>
+                </div>
+            </section>
+
+        </section>
     </main>
 
 
