adição da pagina de produto

--- a/pages/produto.html
+++ b/pages/produto.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>produto</title>
     <link rel="stylesheet" href="../style/style.css">
+    <link rel="stylesheet" href="../style/produto.style.css">>
 </head>
 <body>
     <header>
@@ -21,6 +22,83 @@
         </div>
     </header>
 
+    <main>
+        <div class="tituloPagina">
+            <h2 class="titulo">Nosso produtos</h2>
+        </div>
+    </main>
+
+    <section>
+        <div>
+            <h3>Placas de arduino</h3>
+        </div>
+        <section class="display">
+            <div>
+                <img src="../imgs/ARDUINO_UNO-.png" alt="foto arduino uno" width="250" height="182">
+                <p><strong>Nome:</strong> Arduino uno</p>
+                <p><strong>Valor:</strong>R$68.00</p>
+            </div>
+            <div class="meio">
+                <img src="../imgs/micro.png" alt="foto arduino micro" width="250" height="182">
+                <p><strong>Nome:</strong> Arduino micro</p>
+                <p><strong>Valor:</strong>R$45.00</p>
+            </div>
+            <div>
+                <img src="../imgs/due.png" alt="foto arduino due" width="250" height="182">
+                <p><strong>Nome:</strong> Arduino due</p>
+                <p><strong>Valor:</strong>R$90.00</p>
+            </div>
+        </section>
+        <section>
+            <div>
+                <h3>Sensores</h3>
+            </div>
+            <section class="display">
+                <div>
+                    <img src="../imgs/umidade.png" alt="foto sensor de umidade" width="250" height="182">
+                    <p><strong>Nome:</strong> Sensor de umidade</p>
+                    <p><strong>Valor:</strong>R$4.50</p>
+                </div>
+                <div class="meio">
+                    <img src="../imgs/luz.png" alt="foto sensor de luz" width="250" height="182">
+                    <p><strong>Nome:</strong> Sensor de luz</p>
+                    <p><strong>Valor:</strong>R$2.45</p>
+                </div>
+                <div>
+                    <img src="../imgs/obstaculo.png" alt="foto Sensor de obstaculo" width="250" height="182">
+                    <p><strong>Nome:</strong>Sensor de obstaculo</p>
+                    <p><strong>Valor:</strong>R$6.00</p>
+                </div>
+            </section>
+
+        </section>
+        <section>
+            <div>
+                <h3>livros</h3>
+            </div>
+            <section class="display">
+                <div>
+                    <img src="../imgs/livro%201.jpg" alt="foto livro Conectando O Arduino À Web Novatec" width="250" height="349">
+                    <p><strong>Nome:</strong> Conectando O Arduino À Web Novatec</p>
+                    <p><strong>Autor:</strong> Indira Knight</p>
+                    <p><strong>Valor:</strong>R$89.00</p>
+                </div>
+                <div class="meio">
+                    <img src="../imgs/livro%202.png" alt="foto livro Programação com Arduino: Começando com Sketches" width="250" height="349">
+                    <p><strong>Nome:</strong> Programação com Arduino: Começando com Sketches</p>
+                    <p><strong>Autor:</strong> Simon Monk</p>
+                    <p><strong>Valor:</strong>R$56.00</p>
+                </div>
+                <div>
+                    <img src="../imgs/livro%203.png" alt="foto livro 30 Projetos com Arduino" width="250" height="349">
+                    <p><strong>Nome:</strong> 30 Projetos com Arduino</p>
+                    <p><strong>Autor:</strong> Simon Monk</p>
+                    <p><strong>Valor:</strong>R$34.00</p>
+                </div>
+            </section>
+        </section>
+        <section>
+    </section>
 
     <footer>
         <div>
