remoção de kits e adição de mais informações em interesse

--- a/pages/contato.html
+++ b/pages/contato.html
@@ -35,8 +35,8 @@
                         <option>Não definito</option>
                         <option>Placa de arduino</option>
                         <option>Sensores</option>
-                        <option>Kits</option>
                         <option>Livros</option>
+                        <option>Mais informações</option>
                     </select>
                 </div>
                 <div class="esq">
